package by.khomenko.training.task03.entity;

import java.util.List;

/**
 * Represents a lexeme's instance.
 */
public class Lexeme extends TextComposite {

    /**
     * @param list text's components list to instantiate a class instance.
     */
    public Lexeme(final List<TextComponent> list) {
        super(list);
    }

}
