package by.khomenko.training.task03.entity;

import java.util.List;

/**
 * Represents a word's instance.
 */
public class Word extends TextComposite {

    /**
     * @param listVal text's components list to instantiate a class instance.
     */
    public Word(final List<TextComponent> listVal) {
        super(listVal);
    }

}
