@startuml

title __ENTITY's Class Diagram__\n

  package by.khomenko.training.task03 {
    package by.khomenko.training.task03.entity {
      class BinaryExpression {
          + BinaryExpression()
          + getValue()
      }
    }
  }
  

  package by.khomenko.training.task03 {
    package by.khomenko.training.task03.entity {
      class Lexeme {
          + Lexeme()
      }
    }
  }
  

  package by.khomenko.training.task03 {
    package by.khomenko.training.task03.entity {
      class Paragraph {
          + Paragraph()
      }
    }
  }
  

  package by.khomenko.training.task03 {
    package by.khomenko.training.task03.entity {
      class Sentence {
          + Sentence()
      }
    }
  }
  

  package by.khomenko.training.task03 {
    package by.khomenko.training.task03.entity {
      class Symbol {
          - symbolLeaf : char
          + Symbol()
          + getValue()
          + getTextValue()
          + getSymbolAppearanceCount()
      }
    }
  }
  

  package by.khomenko.training.task03 {
    package by.khomenko.training.task03.entity {
      class Text {
          + Text()
      }
    }
  }
  

  package by.khomenko.training.task03 {
    package by.khomenko.training.task03.entity {
      interface TextComponent {
          {abstract} + getValue()
          {abstract} + getTextValue()
          {abstract} + getSymbolAppearanceCount()
          {abstract} + getComponentsCount()
          {abstract} + getAllTextComponentsOfType()
          {abstract} + sortTextComponents()
      }
    }
  }
  

  package by.khomenko.training.task03 {
    package by.khomenko.training.task03.entity {
      abstract class TextComposite {
          - list : List<TextComponent>
          # delimiter : String
          # prefix : String
          # suffix : String
          + TextComposite()
          + TextComposite()
          + TextComposite()
          + getValue()
          + getTextValue()
          + getSymbolAppearanceCount()
          + getComponentsCount()
          + getAllTextComponentsOfType()
          + sortTextComponents()
          + equals()
          + hashCode()
      }
    }
  }
  

  package by.khomenko.training.task03 {
    package by.khomenko.training.task03.entity {
      class Word {
          + Word()
      }
    }
  }
  

  BinaryExpression -up-|> TextComposite
  Lexeme -up-|> TextComposite
  Paragraph -up-|> TextComposite
  Sentence -up-|> TextComposite
  Symbol -up-|> TextComposite
  Text -up-|> TextComposite
  TextComposite -up-|> TextComponent
  Word -up-|> TextComposite


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
